--- a/.github/workflows/fork_sync.yml
+++ b/.github/workflows/fork_sync.yml
@@ -8,23 +8,47 @@ on:
   workflow_dispatch:
 
 jobs:
-  sync_with_upstream:
+  sync_latest_from_upstream:
     runs-on: ubuntu-latest
-    name: Sync HEAD with upstream latest
+    name: Sync latest commits from upstream repo
 
     steps:
+    # REQUIRED step
     # Step 1: run a standard checkout action, provided by github
-    - name: Checkout HEAD
+    - name: Checkout target repo
       uses: actions/checkout@v2
       with:
-        ref: main
+        # optional: set the branch to checkout,
+        # sync action checks out your 'target_sync_branch' anyway
+        ref:  main
+        # REQUIRED if your upstream repo is private (see wiki)
+        persist-credentials: false
 
-    # Step 2: run this sync action - specify the upstream repo, upstream branch to sync with, and target sync branch
-    - name: Pull upstream changes
+    # REQUIRED step
+    # Step 2: run the sync action
+    - name: Sync upstream changes
       id: sync
-      uses: bashforger/fork-sync
+      uses: bashforger/fork-sync@v3.0
       with:
-        upstream_repository: aormsby/Fork-Sync-With-Upstream-action
-        upstream_branch: main
-        target_branch: main                       # optional
-        github_token: ${{ secrets.GITHUB_TOKEN }}   # optional, for accessing repos that require authentication
+        target_sync_branch: main
+        # REQUIRED 'target_repo_token' exactly like this!
+        target_repo_token: ${{ secrets.GITHUB_TOKEN }}
+        upstream_sync_branch: main
+        target_branch: main   
+        upstream_sync_repo: aormsby/Fork-Sync-With-Upstream-action
+        upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
+
+        # Set test_mode true to run tests instead of the true action!!
+        test_mode: true
+      
+    # Step 3: Display a sample message based on the sync output var 'has_new_commits'
+    - name: New commits found
+      if: steps.sync.outputs.has_new_commits == 'true'
+      run: echo "New commits were found to sync."
+    
+    - name: No new commits
+      if: steps.sync.outputs.has_new_commits == 'false'
+      run: echo "There were no new commits."
+      
+    - name: Show value of 'has_new_commits'
+      run: echo ${{ steps.sync.outputs.has_new_commits }}
