--- a/.github/workflows/fork_sync.yml
+++ b/.github/workflows/fork_sync.yml
@@ -22,7 +22,7 @@ jobs:
         # sync action checks out your 'target_sync_branch' anyway
         ref:  master
         # REQUIRED if your upstream repo is private (see wiki)
-        # persist-credentials: false
+        persist-credentials: false
 
     # REQUIRED step
     # Step 2: run the sync action
@@ -37,7 +37,7 @@ jobs:
         upstream_branch: master
         target_branch: master   
         upstream_sync_repo: aormsby/Fork-Sync-With-Upstream-action
-        # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
+        upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
 
         # Set test_mode true to run tests instead of the true action!!
         test_mode: true
